# window-icon-test

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  window-icon-test.gresource.xml  window_content.glade
